--- a/config/database.yml
+++ b/config/database.yml
@@ -5,30 +5,25 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: postgresql
-  host: localhost
+  adapter: mysql2
   encoding: utf8
+  database: listen_bot
   pool: 5
-  username: postgres
-  password: 1218
-  #adapter: sqlite3
-  #pool: 5
-  #timeout: 5000
+  username: root
+  password:
 
 development:
   <<: *default
   #database: db/development.sqlite3
-  database: start_dash
+  database: listen_bot
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  #database: db/test.sqlite3
-  database: start_dash_test
+  database: listen_bot_test
 
 production:
   <<: *default
-  #database: db/production.sqlite3
-  database: start_dash
+  database: listen_bot
