--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ config/initializers/secret_token.rb
 # config/secrets.yml
 
 # these should all be checked in to normalise the environment:
-# Gemfile.lock, .ruby-version, 
+# Gemfile.lock, .ruby-version,
 .ruby-gemset
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
@@ -47,3 +47,6 @@ config/initializers/secret_token.rb
 bower.json
 
 *.pyc
+learning/models/*
+learning/vocabulary/*
+learning/db/dataset.json
