--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,7 @@
 default: &default
   adapter: mysql2
   encoding: utf8
-  database: listen_bot
+  database: donusagi_bot
   pool: 5
   username: root
   password:
@@ -15,15 +15,15 @@ default: &default
 development:
   <<: *default
   #database: db/development.sqlite3
-  database: listen_bot
+  database: donusagi_bot
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: listen_bot_test
+  database: donusagi_bot_test
 
 production:
   <<: *default
-  database: listen_bot
+  database: donusagi_bot
