urlを別タブで開く対応。チャットのAjax化

--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,8 @@ config/initializers/secret_token.rb
 *.bowerrc
 bower.json
 
+.tags
+
 *.pyc
 learning/learning/models/*
 learning/learning/vocabulary/*
