--- a/learning/requirements.txt
+++ b/learning/requirements.txt
@@ -1,25 +1,1 @@
-alembic==0.8.6
-cycler==0.10.0
-dataset==0.6.4
-gevent==1.1.1
-greenlet==0.4.10
-gsocketpool==0.1.5
-Mako==1.0.4
-MarkupSafe==0.23
-matplotlib==1.5.1
-mecab-python==0.996
-mprpc==0.1.10
-msgpack-python==0.4.7
-MySQL-python==1.2.5
-normality==0.2.4
-numpy==1.11.1
-pandas==0.18.1
-pyparsing==2.1.5
-python-dateutil==2.5.3
-python-editor==1.0.1
-pytz==2016.4
-PyYAML==3.11
-scikit-learn==0.17.1
-scipy==0.17.1
-six==1.10.0
-SQLAlchemy==1.0.13
+mecab-python3==0.7
