分類失敗のしきい値を設定ファイル化

--- a/learning/learning/config/config.yml
+++ b/learning/learning/config/config.yml
@@ -1,5 +1,6 @@
 database:
   endpoint: mysql://root@localhost/donusagi_bot?charset=utf8
+default_no_classified_threshold: 0.9
 # mysql:
 #     host: localhost
 #     user: root
