--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ pickle-email-*.html
 .env
 .DS_Store
 
+
 # Comment out these rules if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
 # config/secrets.yml
@@ -52,8 +53,10 @@ bower.json
 
 *.pyc
 *.bak
+__pycache__
 learning/example.log
 learning/learning/models/*
 learning/learning/vocabulary/*
 learning/learning/example.log
 learning/graph.png
+learning/logs/*
