ansibleの修正とDBの設定を変更

--- a/ansible/roles/base/tasks/main.yml
+++ b/ansible/roles/base/tasks/main.yml
@@ -35,6 +35,8 @@
     - libxml2-devel
     - libxslt
     - libxslt-devel
+    - ImageMagick
+    - ImageMagick-devel
 
 - name: install Development Tool
   sudo: true
