--- a/ansible/roles/nginx/tasks/main.yml
+++ b/ansible/roles/nginx/tasks/main.yml
@@ -8,6 +8,6 @@
 
 - name: deploy nginx config file
   template: >
-    src=donusagi-bot.conf
+    src=my-ope.conf
     dest=/etc/nginx/conf.d/my-ope.conf
   notify: restart nginx
