ymlの内容がerbになっていなかったのを修正

--- a/config/database.yml
+++ b/config/database.yml
@@ -26,7 +26,7 @@ test:
 
 production:
   <<: *default
-  host: ENV['DB_HOST']
+  host: <%= ENV['DB_HOST'] %>
   database: myope
   username: myope
-  password: ENV['DB_PASSWORD']
+  password: <%= ENV['DB_PASSWORD'] %>
