機械学習エンジンを実行できるようにデプロイ修正

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -142,9 +142,9 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 
 [program:engine]
 command=/usr/local/pyenv/shims/python3 myope_server.py
-directory=/var/www/donusagi-bot/learning
+directory=/var/www/donusagi-bot/current/learning
 
 [program:slack_bot]
-command=bundle exec rake slack:listen
-directory=/var/www/donusagi-bot
+command=/usr/local/rbenv/shims/rake slack:listen
+directory=/var/www/donusagi-bot/current
 environment=RAILS_ENV="production"
