評価指標をクロスバリデーションではなく、既存データのスコアに変更する

--- a/learning/learning/config/config.yml
+++ b/learning/learning/config/config.yml
@@ -3,6 +3,7 @@ database:
   host: localhost
   name: donusagi_bot
   user: root
+  password: ""
 default_no_classified_threshold: 0.2
 # mysql:
 #     host: localhost
