--- a/learning/requirements.txt
+++ b/learning/requirements.txt
@@ -1,9 +1,14 @@
 alembic==0.8.7
+appnope==0.1.0
 cycler==0.10.0
 dataset==0.6.4
+decorator==4.0.10
 gevent==1.1.2
 greenlet==0.4.10
 gsocketpool==0.1.5
+ipython==5.0.0
+ipython-genutils==0.1.0
+jaconv==0.2.0
 Mako==1.0.4
 MarkupSafe==0.23
 matplotlib==1.5.1
@@ -12,8 +17,15 @@ mprpc==0.1.10
 msgpack-python==0.4.8
 mysqlclient==1.3.7
 normality==0.2.4
+nose==1.3.7
 numpy==1.11.1
 pandas==0.18.1
+pexpect==4.2.0
+pickleshare==0.7.3
+prompt-toolkit==1.0.5
+ptyprocess==0.5.1
+Pygments==2.1.3
+pykakasi==0.23
 pyparsing==2.1.5
 python-dateutil==2.5.3
 python-editor==1.0.1
@@ -21,6 +33,9 @@ pytz==2016.6.1
 PyYAML==3.11
 scikit-learn==0.17.1
 scipy==0.18.0
+simplegeneric==0.8.1
 six==1.10.0
 SQLAlchemy==1.0.14
+traitlets==4.2.2
 virtualenv==15.0.3
+wcwidth==0.1.7
