--- a/supervisord.conf
+++ b/supervisord.conf
@@ -143,8 +143,10 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 [program:engine]
 command=/usr/local/pyenv/shims/python3 myope_server.py
 directory=/var/www/donusagi-bot/current/learning
+user=a.harada
 
 [program:slack_bot]
 command=/usr/local/rbenv/shims/rake slack:listen
 directory=/var/www/donusagi-bot/current
 environment=RAILS_ENV="production"
+user=a.harada
