--- a/ansible/roles/nginx/templates/my-ope.conf
+++ b/ansible/roles/nginx/templates/my-ope.conf
@@ -1,3 +1,7 @@
+proxy_connect_timeout 160;
+proxy_read_timeout    160;
+proxy_send_timeout    160;
+
 upstream unicorn {
   server unix:/tmp/unicorn.sock;
 }
