初期実行時はないのでエラーになる。後のステップでインストールする

--- a/ansible/roles/newrelic/tasks/main.yml
+++ b/ansible/roles/newrelic/tasks/main.yml
@@ -3,6 +3,7 @@
   shell: |
     yum list installed | grep newrelic-repo.noarch
   register: repo_exists
+  ignore_errors: True
 
 - name: get repo
   yum:
