--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "NODE_ENV=production ./node_modules/.bin/browserify app/assets/javascripts/es2015/all.js --extension=.jsx -o app/assets/javascripts/bundled-es2015.js -v -t [ babelify --presets [ es2015 react ] ]"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
@@ -15,6 +16,7 @@
     "lodash": "^4.17.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-textarea-autosize": "^4.0.5",
     "watchify": "^3.7.0"
   }
 }
