--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "lodash": "^4.17.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-redux": "^5.0.1",
     "react-textarea-autosize": "^4.0.5",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
+    "redux-thunk": "^2.1.0",
     "watchify": "^3.7.0"
   }
 }
