--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "donusagi-bot",
   "description": "[My-ope office](http://www.my-ope.net/)という社内問合せ特化のAIチャットBotサービスのリポジトリです。",
   "scripts": {
-    "watch": "./node_modules/.bin/watchify app/assets/javascripts/es2015/all.js -o app/assets/javascripts/bundled-es2015.js --extension=.jsx -v -t [ babelify --presets [ es2015 react ] ]",
-    "build": "NODE_ENV=production ./node_modules/.bin/browserify app/assets/javascripts/es2015/all.js --extension=.jsx -o app/assets/javascripts/bundled-es2015.js -v -t [ babelify --presets [ es2015 react ] ]"
+    "watch": "./node_modules/.bin/watchify app/assets/javascripts/es2015/all.js -o app/assets/javascripts/bundled-es2015.js --extension=.jsx -v -t [ babelify --presets [ es2015 react ] ] -t [ envify --NODE_ENV development ]",
+    "build": "./node_modules/.bin/browserify app/assets/javascripts/es2015/all.js --extension=.jsx -o app/assets/javascripts/bundled-es2015.js -v -t [ babelify --presets [ es2015 react ] ] -t [ envify --NODE_ENV production ]"
   },
   "dependencies": {
     "axios": "^0.15.3",
@@ -12,6 +12,7 @@
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
     "classnames": "^2.2.5",
+    "envify": "^4.0.0",
     "is-empty": "^1.0.0",
     "lodash": "^4.17.2",
     "react": "^15.4.1",
