--- a/learning/requirements.txt
+++ b/learning/requirements.txt
@@ -16,7 +16,7 @@ normality==0.2.4
 nose==1.3.7
 numpy==1.11.1
 pandas==0.18.1
-git+https://github.com/miurahr/pykakasi
+pykakasi==0.24
 pyparsing==2.1.5
 python-dateutil==2.5.3
 python-editor==1.0.1
