--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0",
+    "uuid": "^3.0.1",
     "watchify": "^3.7.0"
   }
 }
