--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "donusagi-bot",
   "description": "[My-ope office](http://www.my-ope.net/)という社内問合せ特化のAIチャットBotサービスのリポジトリです。",
   "scripts": {
-    "watch": "./node_modules/.bin/watchify app/assets/javascripts/es2015/all.js -o app/assets/javascripts/bundled-es2015.js --extension=.jsx -v -t [ babelify --presets [ es2015 react ] ] -t [ envify --NODE_ENV development ]",
-    "build": "./node_modules/.bin/browserify app/assets/javascripts/es2015/all.js --extension=.jsx -o app/assets/javascripts/bundled-es2015.js -v -t [ babelify --presets [ es2015 react ] ] -t [ envify --NODE_ENV production ]"
+    "watch": "NODE_ENV=development ./node_modules/.bin/watchify app/assets/javascripts/es2015/all.js -o app/assets/javascripts/bundled-es2015.js --extension=.jsx -v -t [ babelify --presets [ es2015 react ] --plugins [ transform-inline-environment-variables ] ]",
+    "build": "NODE_ENV=production ./node_modules/.bin/browserify app/assets/javascripts/es2015/all.js --extension=.jsx -o app/assets/javascripts/bundled-es2015.js -v -t [ babelify --presets [ es2015 react ] --plugins [ transform-inline-environment-variables ] ]"
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "babel-plugin-transform-inline-environment-variables": "^0.0.2",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
     "classnames": "^2.2.5",
-    "envify": "^4.0.0",
     "is-empty": "^1.0.0",
     "lodash": "^4.17.2",
     "promise": "^7.1.1",
