--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "browserify": "^13.1.1",
     "classnames": "^2.2.5",
     "is-empty": "^1.0.0",
+    "jquery": "^3.1.1",
     "lodash": "^4.17.2",
     "promise": "^7.1.1",
     "react": "^15.4.1",
@@ -24,6 +25,7 @@
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0",
+    "toastr": "^2.1.2",
     "uuid": "^3.0.1",
     "watchify": "^3.7.0"
   }
