--- a/package.json
+++ b/package.json
@@ -3,10 +3,34 @@
   "description": "[My-ope office](http://www.my-ope.net/)という社内問合せ特化のAIチャットBotサービスのリポジトリです。",
   "scripts": {
     "watch": "NODE_ENV=development ./node_modules/.bin/watchify app/assets/javascripts/es2015/all.js -o app/assets/javascripts/bundled-es2015.js --extension=.jsx -v -t [ babelify --presets [ es2015 react ] --plugins [ transform-inline-environment-variables ] ]",
-    "build": "NODE_ENV=production ./node_modules/.bin/browserify app/assets/javascripts/es2015/all.js --extension=.jsx -o app/assets/javascripts/bundled-es2015.js -v -t [ babelify --presets [ es2015 react ] --plugins [ transform-inline-environment-variables ] ]"
+    "build": "NODE_ENV=production ./node_modules/.bin/browserify app/assets/javascripts/es2015/all.js --extension=.jsx -o app/assets/javascripts/bundled-es2015.js -v -t [ babelify --presets [ es2015 react ] --plugins [ transform-inline-environment-variables ] ]",
+    "test": "./node_modules/.bin/jest --no-cache"
+  },
+  "jest": {
+    "verbose": true,
+    "automock": true,
+    "roots": [
+      "./spec/javascripts",
+      "./app/assets/javascripts/es2015"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "testPathIgnorePatterns": [
+      "test-helper"
+    ],
+    "unmockedModulePathPatterns": [
+      "test-helper",
+      "lodash",
+      "react",
+      "enzyme",
+      "axios"
+    ]
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "babel-jest": "^19.0.0",
     "babel-plugin-transform-inline-environment-variables": "^0.0.2",
     "babel-polyfill": "^6.22.0",
     "babel-preset-es2015": "^6.18.0",
@@ -14,11 +38,14 @@
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
     "classnames": "^2.2.5",
+    "enzyme": "^2.7.1",
     "is-empty": "^1.0.0",
+    "jest-cli": "^19.0.2",
     "jquery": "^3.1.1",
     "lodash": "^4.17.2",
     "promise": "^7.1.1",
     "react": "^15.4.1",
+    "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
     "react-textarea-autosize": "^4.0.5",
