Install is-empty and react-textarea-autosize npm modules

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
       "lodash",
       "react",
       "enzyme",
-      "axios"
+      "axios",
+      "is-empty",
+      "react-textarea-autosize"
     ]
   },
   "dependencies": {
