--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
       "axios",
       "is-empty",
       "react-textarea-autosize",
-      "classnames"
+      "classnames",
+      "sinon"
     ]
   },
   "dependencies": {
@@ -55,6 +56,7 @@
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0",
+    "sinon": "^1.17.7",
     "toastr": "^2.1.2",
     "uuid": "^3.0.1",
     "watchify": "^3.7.0"
