--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react": "^15.4.1",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.1",
+    "react-radio-group": "^3.0.1",
     "react-redux": "^5.0.1",
     "react-textarea-autosize": "^4.0.5",
     "redux": "^3.6.0",
