--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
     "react-redux": "^5.0.1",
     "react-textarea-autosize": "^4.0.5",
     "redux": "^3.6.0",
+    "redux-actions": "^2.0.1",
     "redux-logger": "^2.7.4",
+    "redux-promise": "^0.5.3",
     "redux-thunk": "^2.1.0",
     "sinon": "^1.17.7",
     "toastr": "^2.1.2",
