--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "watch": "NODE_ENV=development ./node_modules/.bin/watchify app/assets/javascripts/es2015/all.js -o app/assets/javascripts/bundled-es2015.js --extension=.jsx -v -t [ babelify --presets [ es2015 react ] --plugins [ transform-inline-environment-variables ] ]",
     "build": "NODE_ENV=production ./node_modules/.bin/browserify app/assets/javascripts/es2015/all.js --extension=.jsx -o app/assets/javascripts/bundled-es2015.js -v -t [ babelify --presets [ es2015 react ] --plugins [ transform-inline-environment-variables ] ]",
-    "test": "./node_modules/.bin/jest"
+    "test": "jest"
   },
   "jest": {
     "verbose": true,
@@ -31,6 +31,8 @@
       "classnames",
       "sinon",
       "promise"
+      "redux-actions",
+      "redux-promise"
     ]
   },
   "dependencies": {
