Remove uuid package from the mock target

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
       "sinon",
       "promise",
       "redux-actions",
-      "redux-promise"
+      "redux-promise",
+      "uuid"
     ]
   },
   "dependencies": {
