--- a/config/database.yml
+++ b/config/database.yml
@@ -10,7 +10,7 @@ default: &default
   database: donusagi_bot
   pool: 5
   username: root
-  password:
+  password: niH4itYi
 
 development:
   <<: *default
