ymlファイルDB設定を開発環境用から本番環境用へ戻す

--- a/config/database.yml
+++ b/config/database.yml
@@ -10,7 +10,7 @@ default: &default
   database: donusagi_bot
   pool: 5
   username: root
-  password: niH4itYi
+  password:
 
 development:
   <<: *default
