--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "react": "^15.4.1",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.1",
+    "react-linkify": "^0.2.0",
+    "react-loading": "^0.0.9",
     "react-radio-group": "^3.0.1",
     "react-loading": "^0.0.9",
     "react-redux": "^5.0.1",
