rails g config:install

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,7 @@ learning/logs/*
 !*.keep
 
 slack-bot/log
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
