Re-implement chat widget with react

--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "donusagi-bot",
   "description": "[My-ope office](http://www.my-ope.net/)という社内問合せ特化のAIチャットBotサービスのリポジトリです。",
   "scripts": {
-    "watch": "NODE_ENV=development ./node_modules/.bin/watchify app/assets/javascripts/es2015/all.js -o app/assets/javascripts/bundled-es2015.js --extension=.jsx -v -t [ babelify --presets [ es2015 react ] --plugins [ transform-inline-environment-variables ] ]",
-    "build": "NODE_ENV=production ./node_modules/.bin/browserify app/assets/javascripts/es2015/all.js --extension=.jsx -o app/assets/javascripts/bundled-es2015.js -v -t [ babelify --presets [ es2015 react ] --plugins [ transform-inline-environment-variables ] ]",
-    "test": "jest"
+    "watch": "NODE_ENV=development watchify app/assets/javascripts/es2015/all.js -o app/assets/javascripts/bundled-es2015.js --extension=.jsx -v -t [ babelify --presets [ es2015 react ] --plugins [ transform-inline-environment-variables ] ]",
+    "watch-embed": "NODE_ENV=development watchify app/assets/javascripts/es2015/embed.js -o app/assets/javascripts/embed.js --extension=.jsx -v -t [ babelify --presets [ es2015 react ] --plugins [ transform-inline-environment-variables ] ]",
+    "build": "NODE_ENV=production browserify app/assets/javascripts/es2015/all.js --extension=.jsx -o app/assets/javascripts/bundled-es2015.js -v -t [ babelify --presets [ es2015 react ] --plugins [ transform-inline-environment-variables ] ]",
+    "build-embed": "NODE_ENV=production browserify app/assets/javascripts/es2015/embed.js --extension=.jsx -o app/assets/javascripts/embed.js -v -t [ babelify --presets [ es2015 react ] --plugins [ transform-inline-environment-variables ] ]",
+    "test": "./node_modules/.bin/jest"
   },
   "jest": {
     "verbose": true,
@@ -68,6 +70,7 @@
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.1.0",
     "sinon": "^1.17.7",
+    "styled-components": "^1.4.6",
     "toastr": "^2.1.2",
     "uuid": "^3.0.1",
     "watchify": "^3.7.0"
