--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
+    "bytes": "^2.5.0",
     "classnames": "^2.2.5",
     "copy-to-clipboard": "^3.0.6",
     "enzyme": "^2.7.1",
