--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ rerun.txt
 pickle-email-*.html
 .env
 .DS_Store
+node_modules
 
 
 # Comment out these rules if you are OK with secrets being uploaded to the repo
