--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
     "classnames": "^2.2.5",
+    "copy-to-clipboard": "^3.0.6",
     "enzyme": "^2.7.1",
     "is-empty": "^1.0.0",
     "jest-cli": "^19.0.2",
@@ -61,7 +62,6 @@
     "react-loading": "^0.0.9",
     "react-nl2br": "^0.2.0",
     "react-radio-group": "^3.0.1",
-    "react-loading": "^0.0.9",
     "react-redux": "^5.0.1",
     "react-textarea-autosize": "^4.0.5",
     "redux": "^3.6.0",
