--- a/learning/learning/config/config.yml.example
+++ b/learning/learning/config/config.yml.example
@@ -21,8 +21,8 @@ test:
 production:
   <<: *default
   database:
-    endpoint: mysql://myope:yGM7fj2jQQZCui@app-myope.ccfwhx3hbmfs.ap-northeast-1.rds.amazonaws.com/myope?charset=utf8
-    host: app-myope.ccfwhx3hbmfs.ap-northeast-1.rds.amazonaws.com
-    name: myope
-    user: myope
-    password: yGM7fj2jQQZCui
+    endpoint: 
+    host: 
+    name: 
+    user: 
+    password: 
