環境設定の自由度を向上する

--- a/config/database.yml
+++ b/config/database.yml
@@ -5,6 +5,7 @@
 #   gem 'sqlite3'
 #
 default: &default
+  host: <%= ENV.fetch('DB_HOST'){'127.0.0.1'} %>
   adapter: mysql2
   encoding: utf8
   database: donusagi_bot
