vscodeにnosetestsの設定を追加

--- a/learning/.vscode/launch.json
+++ b/learning/.vscode/launch.json
@@ -16,6 +16,25 @@
         "WaitOnNormalExit",
         "RedirectOutput"
       ]
+    },
+    {
+        "name": "Nose",
+        "type": "python",
+        "request": "launch",
+        "stopOnEntry": false,
+        "pythonPath": "${config.python.pythonPath}",
+        "program": "${workspaceRoot}/.vscode/noserunner.py",
+        "cwd": "${workspaceRoot}",
+        "debugOptions": [
+            "WaitOnAbnormalExit",
+            "WaitOnNormalExit",
+            "RedirectOutput"
+        ],
+        "args": [
+            "${file}",  // currently selected file
+            "-v",       // additional nose parameters –
+            "-s"        // tweak to your liking
+        ]
     }
   ]
 }
