envを渡すインタフェースの変更に対応

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -141,7 +141,7 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;files = relative/directory/*.ini
 
 [program:engine]
-command=/usr/local/pyenv/shims/python3 myope_server.py production
+command=/usr/local/pyenv/shims/python3 myope_server.py --env production
 directory=/var/www/donusagi-bot/current/learning
 user=deploy
 
