--- a/learning/.vscode/launch.json
+++ b/learning/.vscode/launch.json
@@ -5,7 +5,7 @@
       "name": "Python",
       "type": "python",
       "request": "launch",
-      "stopOnEntry": true,
+      "stopOnEntry": false,
       "pythonPath": "${config:python.pythonPath}",
       "program": "${workspaceRoot}/myope_server.py",
       "cwd": "${workspaceRoot}",
