Change react version from 15.4.6 to 0.14.8

--- a/package.json
+++ b/package.json
@@ -57,9 +57,9 @@
     "lodash": "^4.17.2",
     "object-to-formdata": "^1.0.12",
     "promise": "^7.1.1",
-    "react": "^15.4.1",
+    "react": "0.14.8",
     "react-addons-test-utils": "^15.4.2",
-    "react-dom": "^15.4.1",
+    "react-dom": "0.14.8",
     "react-linkify": "^0.2.0",
     "react-loading": "^0.0.9",
     "react-nl2br": "^0.2.0",
