--- a/learning/prototype/es-kibana/docker-compose.yml
+++ b/learning/prototype/es-kibana/docker-compose.yml
@@ -3,22 +3,23 @@ services:
   elasticsearch:
     build: elasticsearch
     volumes:
-        - es-data:/usr/share/elasticsearch/data
-        - ./elasticsearch/config:/usr/share/elasticsearch/config
+      - es-data:/usr/share/elasticsearch/data
+      - ./elasticsearch/config:/usr/share/elasticsearch/config
     ports:
-        - 9200:9200
+      - 9200:9200
     expose:
-        - 9300
+      - 9300
     ulimits:
-        nofile:
-            soft: 65536
-            hard: 65536
+      nofile:
+        soft: 65536
+        hard: 65536
   kibana:
     build: kibana
+    tty: false
     links:
-        - elasticsearch:elasticsearch
+      - elasticsearch:elasticsearch
     ports:
-        - 5601:5601
+      - 5601:5601
 
 volumes:
   es-data:
