--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs:
       - run:
           name: install dependencies
           command: |
+            sh lib/bin/mecab-install-circleci.sh
             bundle install --jobs=4 --retry=3 --path vendor/bundle
 
       - save_cache:
