--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,13 +6,15 @@ version: 2
 jobs:
   build:
     docker:
-      # specify the version you desire here
-       - image: circleci/ruby:2.3.4-node-browsers
+      - image: circleci/ruby:2.3.4-node-browsers
+        environment:
+          DB_HOST: 127.0.0.1
 
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
+      - image: circleci/mysql:5.7
+        environment:
+          MYSQL_ALLOW_EMPTY_PASSWORD: true
+          MYSQL_DATABASE: donusagi_bot_test
+          MYSQL_USER: root
 
     working_directory: ~/repo
 
