--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
             dpkg -i google-chrome-stable_current_amd64.deb; apt-get -fy install
             wget https://chromedriver.storage.googleapis.com/2.29/chromedriver_linux64.zip
             unzip chromedriver_linux64.zip
-            sudo cp chromedriver /usr/local/bin/chromedriver
+            cp chromedriver /usr/local/bin/chromedriver
 
       - save_cache:
           paths:
