Add RAILS_ENV=test to test component

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
     environment:
       - DB_HOST=db
       - RPC_HOST=learning_test
+      - RAILS_ENV=test
   db:
     image: mysql
     tty: false
