--- a/ansible/roles/base/tasks/main.yml
+++ b/ansible/roles/base/tasks/main.yml
@@ -39,7 +39,7 @@
     - ImageMagick-devel
 
 - name: install Development Tool
-  sudo: true
+  become: yes
   shell: yum -y groupinstall "Development Tools"
 
 # timezone
