--- a/ansible/roles/mysql/tasks/main.yml
+++ b/ansible/roles/mysql/tasks/main.yml
@@ -7,8 +7,8 @@
 - name: install MySQL
   yum: name=mysql-server state=installed
 
-- name: Auto Running MySQL
-  service: name=mysqld state=running enabled=yes
+- name: Auto starting MySQL
+  service: name=mysqld state=started enabled=yes
   tags: mysqld
 
 - name: setup password for root
