--- a/ansible/roles/mysql/tasks/main.yml
+++ b/ansible/roles/mysql/tasks/main.yml
@@ -3,13 +3,22 @@
   yum: name={{ item }} state=installed
   with_items:
     - MySQL-python27
+  when:
+    - stage == "development"
+    - stage == "staging"
 
 - name: install MySQL
   yum: name=mysql-server state=installed
+  when:
+    - stage == "development"
+    - stage == "staging"
 
 - name: Auto starting MySQL
   service: name=mysqld state=started enabled=yes
   tags: mysqld
+  when:
+    - stage == "development"
+    - stage == "staging"
 
 - name: setup password for root
   template:
@@ -18,6 +27,9 @@
     owner: root
     group: root
     mode: 0600
+  when:
+    - stage == "development"
+    - stage == "staging"
 
 - mysql_user:
     name: 'root'
@@ -33,6 +45,9 @@
     - ::1
     - localhost
     - localhost.localdomain
+  when:
+    - stage == "development"
+    - stage == "staging"
 
 - mysql_user:
     name: '{{ secrets.db_user }}'
@@ -48,15 +63,24 @@
     - ::1
     - localhost
     - localhost.localdomain
+  when:
+    - stage == "development"
+    - stage == "staging"
 
 - mysql_db:
     name: '{{ secrets.db_name }}'
     state: present
     login_user: 'root'
     login_password: '{{ passwords.mysql_root }}'
+  when:
+    - stage == "development"
+    - stage == "staging"
 
 - name: set up default encoding
   template:
     src: my.cnf.general
     dest: /etc/my.cnf
   notify: restart mysql
+  when:
+    - stage == "development"
+    - stage == "staging"
