--- a/learning/.vscode/launch.json
+++ b/learning/.vscode/launch.json
@@ -7,7 +7,7 @@
       "request": "launch",
       "stopOnEntry": false,
       "pythonPath": "${config:python.pythonPath}",
-      "program": "${workspaceRoot}/grpc_server.py",
+      "program": "${workspaceRoot}/myope_server.py",
       "cwd": "${workspaceRoot}",
       "env": {},
       "envFile": "${workspaceRoot}/.env",
