--- a/ansible/roles/nginx/tasks/main.yml
+++ b/ansible/roles/nginx/tasks/main.yml
@@ -12,7 +12,7 @@
     dest=/etc/nginx/conf.d/my-ope.conf
   notify: restart nginx
 
-- name:  dpeloy general nginx config file
+- name:  deploy general nginx config file
   template: >
     src=nginx.conf
     dest=/etc/nginx/nginx.conf
